# aegis

./: Cargo.toml
src/: main.rs
src/core/: crypto.rs  error.rs  format.rs  mod.rs
